brat/test/golden/error/inconsistentclauses.brat.golden
Error in test/golden/error/inconsistentclauses.brat@1:1-3:9
f(Bool, Nat) -> Nat
^^^^^^^^^^^^^^^^^^^
f(true, n) = 1
^^^^^^^^^^^^^^
f(b) = 2
^^^^^^^^

  Unification error: Pattern doesn't match expected length for constructor args

